--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.2",
     "tslib": "^2.3.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.8",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
